--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/home/jihed/luceorVPNserver-automation/gencas.sh.old
-/home/jihed/luceorVPNserver-automation/kubeConfig
-/home/jihed/luceorVPNserver-automation/.dockerpass.txt
-/home/jihed/luceorVPNserver-automation/.gittoken
-/home/jihed/luceorVPNserver-automation/client.conf
-/home/jihed/luceorVPNserver-automation/server.conf
-/home/jihed/luceorVPNserver-automation/test.sh
-/home/jihed/luceorVPNserver-automation/easy-rsa
+gencas.sh.old
+kubeConfig
+.dockerpass.txt
+.gittoken
+client.conf
+server.conf
+test.sh
+easy-rsa
