updates (ingress controller deployment)

--- a/ingress/.gitignore
+++ b/ingress/.gitignore
@@ -1,7 +1,8 @@
 ingress-test.yaml
-ingress/ingress.yaml
-ingress/ingressClass.yaml
-ingress/nginx-controller-patch.yaml
+ingress.yaml
+ingressClass.yaml
+nginx-controller-patch.yaml
 patch.txt
 patchtest.yaml
 proxy-stream-responses.yaml
+.gitignore
